# KiVi_2.0

./: .gitignore  README.md  hello.py  pyproject.toml
dataset/raw/: hello.py  pyproject.toml
dataset/tamil_wiki/: __init__.py  __main__.py  pyproject.toml
model/: model.py
scripts/: distributed_train.py  evaluate.py  train.py
